[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openkl"
version = "0.1.0"
description = "Open Knowledge Layer - Local-first knowledge and memory layer for AI agents"
authors = [{name = "Siwei Gu", email = "siwei@nowledge.co"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "kuzu>=0.8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "fastembed>=0.2.0",
    "numpy>=1.21.0",
    "kreuzberg",
    "arxiv",
    "requests",
    "beautifulsoup4",
    "markdown",
    "pypdf2>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
ok = "openkl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["openkl"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
]
